@@ -10,3 +10,9 @@ dependencies {
 application {
     mainClass = "aston.java.intensive.module5.Main"
 }
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs(
+        "-XX:+UseCompactObjectHeaders",
+    )
+}
